Updated working hour text to verify changes.
Signed-off-by: bkothari <31.kothari@gmail.com>

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           </div>
         </div> 
         <div class="col-md probootstrap-opening">
-          <h2 class="text-uppercase mb-3">Opening Hour <span>Medical Center</span></h2>
+          <h2 class="text-uppercase mb-3">Working Hour <span>Medical Center</span></h2>
           <ul class="list-unstyled probootstrap-schedule">
             <li>Mon-Fri <span>5:00-17:00</span></li>
             <li>Sat <span>6:30-17:00</span></li>
