Updated the changes to support the new layout.
Signed-off-by: bkothari <31.kothari@gmail.com>

--- a/index.html
+++ b/index.html
@@ -35,9 +35,13 @@
       <div class="collapse navbar-collapse" id="probootstrap-nav">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active"><a href="index.html" class="nav-link pl-0">Home</a></li>
-          <li class="nav-item"><a href="departments.html" class="nav-link">Departments</a></li>
-          <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
+          <li class="nav-item active"><a href="solutions.html" class="nav-link pl-0">Solutions</a></li>
+          <li class="nav-item active"><a href="expertise.html" class="nav-link pl-0">Expertise</a></li>
+          <li class="nav-item active"><a href="blogs.html" class="nav-link pl-0">Blogs</a></li>
+          <li class="nav-item active"><a href="careers.html" class="nav-link pl-0">Careers</a></li>
           <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
+          <!--<li class="nav-item"><a href="departments.html" class="nav-link">Departments</a></li>
+          <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>-->
         </ul>
         <div class="ml-auto">
           <form action="#" method="get" class="probootstrap-search-form mb-sm-0 mb-3">
@@ -441,8 +445,12 @@
           <h3 class="heading">Quick Links</h3>
           <ul class="list-unstyled probootstrap-footer-links">
             <li><a href="#">Home</a></li>
-            <li><a href="#">Department</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="#">Solutions</a></li>
+            <li><a href="#">Expertise</a></li>
+            <li><a href="#">Blogs</a></li>
+            <li><a href="#">Careers</a></li>
+            <!--<li><a href="#">Department</a></li>
+            <li><a href="#">About</a></li>-->
             <li><a href="#">Contact</a></li>
           </ul>
         </div>
