--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           <div class="mb-3">
             <h2 class="h6">Departments</h2>
             <ul class="list-unstyled probootstrap-light mb-4">
-              <li><a href="#">Urology</a></li>
+              <li><a href="#">Engineering</a></li>
               <li><a href="#">Pediatrics</a></li>
               <li><a href="#">Psychiatrics</a></li>
               <li><a href="#">Plastic Surgery</a></li>
