--- a/expertise.html
+++ b/expertise.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Health - Free HTML5 Bootstrap 4 Template by uicookies.com</title>
+  <title>Embeddian Technologies - Embedded solutions provider with niche expertise</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="Free HTML5 Website Template by uicookies.com" />
@@ -94,7 +94,7 @@
               <li class="active"><a href="#">Networking</a></li>
               <li><a href="#">BSP & Firmware</a></li>
               <li><a href="#">Multimedia</a></li>
-              <li><a href="#">DevOps</a></li>
+              <li><a href="#">Engineering Productivity</a></li>
             </ul>
           </div>
         </div>
