--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <li class="nav-item active"><a href="expertise.html" class="nav-link pl-0">Expertise</a></li>
           <li class="nav-item active"><a href="blogs.html" class="nav-link pl-0">Blogs</a></li>
           <li class="nav-item active"><a href="careers.html" class="nav-link pl-0">Careers</a></li>
-          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
+          <li class="nav-item"><a href="contact.html" class="nav-link">Contact Us</a></li>
           <!--<li class="nav-item"><a href="departments.html" class="nav-link">Departments</a></li>
           <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>-->
         </ul>
