--- a/about.html
+++ b/about.html
@@ -97,17 +97,13 @@
         </div>
         <div class="col-md-9 pl-md-5 pb-5 pl-0 probootstrap-inside">
           <h1 class="mt-4 mb-4">History</h1>
-          <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+          <p>EMBEDDIAN TECHNOLOGIES is a highly skilled market-savvy product engineering software solutions company, which acts as a single stop solution enabler to provide context to our customer’s core innovation by efficiently filling the gaps in their product roadmap. Our technical domain strengths, innovative approach, out-of-the-box thinking, and adherence to on-time delivery with uncompromising quality, make us a preferred choice for all technology needs.</p>
 
-          <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-          <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
+          <p>At EMBEDDIAN TECHNOLOGIES, we’ve created a culture for self-development and innovation through a very advanced skill-enhancement lab.</p>
+          <p>EMBEDDIAN TECHNOLOGIES was started by veterans in the embedded industry who has combined experience of 60+ years in couple of world leading fortune 500 companies. We have already served more than 10 customers from India & the USA and with an upcoming design center in Ahmedabad, India; EMBEDDIAN TECHNOLOGIES is all set to revolutionize embedded services industry with their niche expertise.</p>
 
-          <p>The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen. She packed her seven versalia, put her initial into the belt and made herself on the way.</p>
-          <p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane. Pityful a rethoric question ran over her cheek, then she continued her way.</p>
-
-          <p>On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would have been rewritten a thousand times and everything that was left from its origin would be the word "and" and the Little Blind Text should turn around and return to its own, safe country. </p>
-
-          <p>But nothing the copy said could convince her and so it didn’t take long until a few insidious Copy Writers ambushed her, made her drunk with Longe and Parole and dragged her into their agency, where they abused her for their.</p>
+          <p>EMBEDDIAN TECHNOLOGIES helps enterprises, technology providers, and start-ups build products in the domains of OS, Consumer Devices & Electronics, Multimedia & Entertainment, Engineering R&D, Automotive, Automation, Engineering Productivity businesses.</p>
+          <p>We deliver consistently exceptional customer experiences, business efficiency, and actionable insights by leveraging an integrated set of leading technologies like BSP & Firmware, Mobility, Multimedia, Unified Communication etc. We offer domain-centric solutions applying veteran skills, IPs and functional expertise in Product Engineering, Software Solutions, Enterprise Mobility, Quality Assurance Services and Business Analytics.</p>
         </div>
       </div>
     </div>
