History to Our Story
Text change

--- a/about.html
+++ b/about.html
@@ -96,7 +96,7 @@
           </div>
         </div>
         <div class="col-md-9 pl-md-5 pb-5 pl-0 probootstrap-inside">
-          <h1 class="mt-4 mb-4">History</h1>
+          <h1 class="mt-4 mb-4">Our Story</h1>
           <p>EMBEDDIAN TECHNOLOGIES is a highly skilled market-savvy product engineering software solutions company, which acts as a single stop solution enabler to provide context to our customer’s core innovation by efficiently filling the gaps in their product roadmap. Our technical domain strengths, innovative approach, out-of-the-box thinking, and adherence to on-time delivery with uncompromising quality, make us a preferred choice for all technology needs.</p>
 
           <p>At EMBEDDIAN TECHNOLOGIES, we’ve created a culture for self-development and innovation through a very advanced skill-enhancement lab.</p>
