--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
           <div class="float-md-right float-none">
           <div class="probootstrap-contact-phone d-flex align-items-top mb-3 float-left">
             <span class="icon mr-2"><i class="icon-phone"></i></span>
-            <span class="probootstrap-text"> +900 123 456 7 <small class="d-block"><a href="#" class="arrow-link">Appointment <i class="icon-chevron-right"></i></a></small></span>
+            <!-- span class="probootstrap-text"> +900 123 456 7 <small class="d-block"><a href="#" class="arrow-link">Appointment <i class="icon-chevron-right"></i></a></small></span -->
           </div>
           </div>
         </div>
@@ -74,7 +74,7 @@
       <div class="row">
         <div class="col-md-6 mb-5">
           <h1 class="display-4">About Us</h1>
-          <p class="lead text-secondary">A free bootstrap template by <a href="https://uicookies.com/" target="_blank">uicookies.com</a></p>
+          <!-- p class="lead text-secondary">A free bootstrap template by <a href="https://uicookies.com/" target="_blank">uicookies.com</a></p -->
         </div>
       </div>
     </div>
