--- a/expertise.html
+++ b/expertise.html
@@ -37,9 +37,10 @@
           <li class="nav-item"><a href="index.html" class="nav-link pl-0">Home</a></li>
           <li class="nav-item"><a href="solutions.html" class="nav-link pl-0">Solutions</a></li>
           <li class="nav-item active"><a href="expertise.html" class="nav-link pl-0">Expertise</a></li>
-          <li class="nav-item"><a href="blogs.html" class="nav-link pl-0">Blogs</a></li>
-          <li class="nav-item"><a href="careers.html" class="nav-link pl-0">Careers</a></li>
-          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
+	  <li class="nav-item"><a href="about.html" class="nav-link pl-0">About</a></li>
+          <!--<li class="nav-item"><a href="blogs.html" class="nav-link pl-0">Blogs</a></li>
+	  <li class="nav-item"><a href="careers.html" class="nav-link pl-0">Careers</a></li>-->
+          <li class="nav-item"><a href="contact.html" class="nav-link">Contact Us</a></li>
         </ul>
         <div class="ml-auto">
           <form action="#" method="get" class="probootstrap-search-form mb-sm-0 mb-3">
@@ -53,6 +54,8 @@
     </div>
   </nav>
   <!-- END nav -->
+
+  <!-- removed below
   <header role="banner" class="probootstrap-header py-5">
     <div class="container">
       <div class="row">
@@ -70,13 +73,14 @@
       </div>
     </div>
   </header>
+  -->
 
   <section class="mb-5">
     <div class="container">
       <div class="row">
         <div class="col-md-6 mb-5">
           <h1 class="display-4">Expertise</h1>
-          <p class="lead text-secondary">A free bootstrap template by <a href="https://uicookies.com/" target="_blank">uicookies.com</a></p>
+	  <!--<p class="lead text-secondary">A free bootstrap template by <a href="https://uicookies.com/" target="_blank">uicookies.com</a></p>-->
         </div>
       </div>
     </div>
@@ -99,8 +103,8 @@
           </div>
         </div>
         <div class="col-md-9 pl-md-5 pb-5 pl-0 probootstrap-inside">
-          <h1 class="mt-4 mb-4">Eurology</h1>
-          <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+          <h1 class="mt-4 mb-4">Networking</h1>
+          <!--<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
 
           <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
           <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
@@ -110,11 +114,13 @@
 
           <p>On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would have been rewritten a thousand times and everything that was left from its origin would be the word "and" and the Little Blind Text should turn around and return to its own, safe country. </p>
 
-          <p>But nothing the copy said could convince her and so it didn’t take long until a few insidious Copy Writers ambushed her, made her drunk with Longe and Parole and dragged her into their agency, where they abused her for their.</p>
+	  <p>But nothing the copy said could convince her and so it didn’t take long until a few insidious Copy Writers ambushed her, made her drunk with Longe and Parole and dragged her into their agency, where they abused her for their.</p>-->
         </div>
       </div>
     </div>
   </section>
+
+  <!-- removed below
   <section class="probootstrap-section overlay bg-image" style="background-image: url(images/bg_1.jpg)">
     <div class="container">
       <div class="row">
@@ -128,7 +134,9 @@
       </div>
     </div>
   </section>
+  -->
 
+  <!-- removed below
   <section class="probootstrap-section" id="section-counter">
       <div class="container">
         <div class="row">
@@ -160,13 +168,14 @@
       </div>
       
     </section>
+  -->
 
   <section class="probootstrap-subscribe">
     <div class="container">
       <div class="row mb-5">
         <div class="col-md-12">
           <h2 class="h1 text-white">Subscribe Newsletter</h2>
-          <p class="lead text-white">Far far away, behind the word mountains, far from the countries Vokalia.</p>
+	  <!--<p class="lead text-white">Far far away, behind the word mountains, far from the countries Vokalia.</p>-->
         </div>
       </div>
       <form action="#" method="post">
@@ -191,6 +200,7 @@
       <div class="row mb-5">
         <div class="col-md-3">
           <h3 class="heading">Latest Blog</h3>
+	  <!--
           <ul class="list-unstyled probootstrap-footer-recent-post">
             <li>
               <a href="#"><span class="date">November 15, 2017</span> The practice of medicine is a lot like parenting </a>
@@ -199,16 +209,18 @@
               <a href="#"><span class="date">November 15, 2017</span>Physicians: Want to overcome burnout? Start studying business. </a>
             </li>
           </ul>
+	  -->
         </div>
         <div class="col-md-3">
           <h3 class="heading">Head Office</h3>
-          <p class="mb-5">98 West 21th Street, Suite 721 New York NY 10016</p>
+          <!--<p class="mb-5">98 West 21th Street, Suite 721 New York NY 10016</p>
           <h3 class="heading text-white">Open</h3> 
           <p>
             Mon-Fri 7:30-18:00 <br>
             Sat 7:30-18:00 <br>
             Sun 7:30-18:00
           </p>
+	  -->
         </div>
         <div class="col-md-3">
           <h3 class="heading">Quick Links</h3>
@@ -216,9 +228,10 @@
             <li><a href="#">Home</a></li>
             <li><a href="#">Solutions</a></li>
             <li><a href="#">Expertise</a></li>
-            <li><a href="#">Blogs</a></li>
-            <li><a href="#">Careers</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#">About</a></li> 
+	    <!--<li><a href="#">Blogs</a></li>
+	    <li><a href="#">Careers</a></li>-->
+            <li><a href="#">Contact Us</a></li>
           </ul>
         </div>
         <div class="col-md-3">
@@ -233,7 +246,8 @@
       <!-- END row -->
       <div class="row probootstrap-copyright">
         <div class="col-md-12">
-          <p><small>&copy; 2017 <a href="https://uicookies.com/" target="_blank">ProBootstrap Health</a>. All Rights Reserved. Designed &amp; Developed by <a href="https://uicookies.com/" target="_blank">uicookies.com</a> (please don't remove credit, see <a href="https://uicookies.com/license/" target="_blank">license</a>)  <br> Demo Images <a href="https://pexels.com/">Pexels</a> </small></p>
+	  <p><small>&copy; 2018 Embeddian Technologies All Rights Reserved.</p>	
+          <p>&copy; 2017 <a href="https://uicookies.com/" target="_blank">ProBootstrap Health</a>. All Rights Reserved. Designed &amp; Developed by <a href="https://uicookies.com/" target="_blank">uicookies.com</a> (please don't remove credit, see <a href="https://uicookies.com/license/" target="_blank">license</a>)  <br> Demo Images <a href="https://pexels.com/">Pexels</a> </small></p>
         </div>
       </div>
     </div>
