--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
       <div class="collapse navbar-collapse" id="probootstrap-nav">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active"><a href="index.html" class="nav-link pl-0">Home</a></li>
-          <li class="nav-item active"><a href="solutions.html" class="nav-link pl-0">Solutions</a></li>
-          <li class="nav-item active"><a href="expertise.html" class="nav-link pl-0">Expertise</a></li>
-          <li class="nav-item active"><a href="blogs.html" class="nav-link pl-0">Blogs</a></li>
-          <li class="nav-item active"><a href="careers.html" class="nav-link pl-0">Careers</a></li>
+          <li class="nav-item"><a href="solutions.html" class="nav-link pl-0">Solutions</a></li>
+          <li class="nav-item"><a href="expertise.html" class="nav-link pl-0">Expertise</a></li>
+          <!--<li class="nav-item"><a href="blogs.html" class="nav-link pl-0">Blogs</a></li>
+	  <li class="nav-item"><a href="careers.html" class="nav-link pl-0">Careers</a></li>-->
+          <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
           <li class="nav-item"><a href="contact.html" class="nav-link">Contact Us</a></li>
-          <!--<li class="nav-item"><a href="departments.html" class="nav-link">Departments</a></li>
-          <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>-->
+	  <!--<li class="nav-item"><a href="departments.html" class="nav-link">Departments</a></li>-->
         </ul>
         <div class="ml-auto">
           <form action="#" method="get" class="probootstrap-search-form mb-sm-0 mb-3">
@@ -55,6 +55,7 @@
     </div>
   </nav>
   <!-- END nav -->
+  <!-- removed below
   <header role="banner" class="probootstrap-header py-5">
     <div class="container">
       <div class="row">
@@ -72,7 +73,9 @@
       </div>
     </div>
   </header>
+  -->
 
+  <!-- removed below
   <section class="mb-5">
     <div class="container">
       <div class="row">
@@ -83,7 +86,9 @@
       </div>
     </div>
   </section>
-  
+  -->
+
+  <!-- removed below
   <section class="probootstrap-features-1">
     <div class="container">
       <div class="row">
@@ -111,7 +116,9 @@
       </div>
     </div>
   </section>
+  -->
 
+  <!-- removed below
   <section class="probootstrap-services">
     <div class="container">
       <div class="row no-gutters">
@@ -204,9 +211,9 @@
       </div>
     </div>
   </section>
+  -->
 
-
-
+  <!-- removed below 
   <section class="probootstrap-blog-appointment">
     <div class="container">
       <div class="row no-gutters">
@@ -249,6 +256,7 @@
       </div>
     </div>
   </section>
+  -->
 
   <section class="probootstrap-section">
     <div class="container">
@@ -316,6 +324,7 @@
     </div>
   </section>
 
+  <!-- removed below
   <section class="probootstrap-section bg-light">
     <div class="container">
       <div class="row mb-5">
@@ -359,7 +368,9 @@
       </div>
     </div>
   </section>
+  -->
 
+  <!-- removed below
   <section class="probootstrap-section" id="section-counter">
       <div class="container">
         <div class="row">
@@ -391,7 +402,9 @@
       </div>
       
     </section>
+  -->
 
+  <!-- removed below 
   <section class="probootstrap-subscribe">
     <div class="container">
       <div class="row mb-5">
@@ -416,12 +429,14 @@
       </form>
     </div>
   </section>
+  -->
 
   <footer class="probootstrap-footer">
     <div class="container">
       <div class="row mb-5">
         <div class="col-md-3">
           <h3 class="heading">Latest Blog</h3>
+	  <!-- 
           <ul class="list-unstyled probootstrap-footer-recent-post">
             <li>
               <a href="#"><span class="date">November 15, 2017</span> The practice of medicine is a lot like parenting </a>
@@ -430,16 +445,19 @@
               <a href="#"><span class="date">November 15, 2017</span>Physicians: Want to overcome burnout? Start studying business. </a>
             </li>
           </ul>
+	  -->
         </div>
         <div class="col-md-3">
           <h3 class="heading">Head Office</h3>
-          <p class="mb-5">98 West 21th Street, Suite 721 New York NY 10016</p>
-          <h3 class="heading text-white">Open</h3> 
+          <!-- p class="mb-5">98 West 21th Street, Suite 721 New York NY 10016</p -->
+	  <!--
+          <h3 class="heading text-white">Open</h3>
           <p>
             Mon-Fri 7:30-18:00 <br>
             Sat 7:30-18:00 <br>
             Sun 7:30-18:00
           </p>
+	  -->
         </div>
         <div class="col-md-3">
           <h3 class="heading">Quick Links</h3>
@@ -447,11 +465,11 @@
             <li><a href="#">Home</a></li>
             <li><a href="#">Solutions</a></li>
             <li><a href="#">Expertise</a></li>
-            <li><a href="#">Blogs</a></li>
+            <!--<li><a href="#">Blogs</a></li>
             <li><a href="#">Careers</a></li>
-            <!--<li><a href="#">Department</a></li>
-            <li><a href="#">About</a></li>-->
-            <li><a href="#">Contact</a></li>
+	    <li><a href="#">Department</a></li>-->
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact Us</a></li>
           </ul>
         </div>
         <div class="col-md-3">
@@ -466,7 +484,8 @@
       <!-- END row -->
       <div class="row probootstrap-copyright">
         <div class="col-md-12">
-          <p><small>&copy; 2017 <a href="https://uicookies.com/" target="_blank">uiCookies Health</a>. All Rights Reserved. Designed &amp; Developed by <a href="https://uicookies.com/" target="_blank">uicookies.com</a> (please don't remove credit, see <a href="https://uicookies.com/license/" target="_blank">license</a>)  <br> Demo Images <a href="https://pexels.com/">Pexels</a> </small></p>
+	  <p><small>&copy; 2018 Embeddian Technologies All Rights Reserved.</p>
+          <p>&copy; 2017 <a href="https://uicookies.com/" target="_blank">uiCookies Health</a>. All Rights Reserved. Designed &amp; Developed by <a href="https://uicookies.com/" target="_blank">uicookies.com</a> (please don't remove credit, see <a href="https://uicookies.com/license/" target="_blank">license</a>)  <br> Demo Images <a href="https://pexels.com/">Pexels</a> </small></p>
         </div>
       </div>
     </div>
