--- a/contact.html
+++ b/contact.html
@@ -35,9 +35,11 @@
       <div class="collapse navbar-collapse" id="probootstrap-nav">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item"><a href="index.html" class="nav-link pl-0">Home</a></li>
-          <li class="nav-item"><a href="departments.html" class="nav-link">Departments</a></li>
-          <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-          <li class="nav-item active"><a href="contact.html" class="nav-link">Contact</a></li>
+	  <!-- li class="nav-item"><a href="departments.html" class="nav-link">Departments</a></li>-->
+          <li class="nav-item"><a href="solutions.html" class="nav-link">Solutions</a></li>
+          <li class="nav-item"><a href="expertise.html" class="nav-link">Expertise</a></li>
+	  <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
+          <li class="nav-item active"><a href="contact.html" class="nav-link">Contact Us</a></li>
         </ul>
         <div class="ml-auto">
           <form action="#" method="get" class="probootstrap-search-form mb-sm-0 mb-3">
@@ -51,6 +53,7 @@
     </div>
   </nav>
   <!-- END nav -->
+  <!-- removed below logo
   <header role="banner" class="probootstrap-header py-5">
     <div class="container">
       <div class="row">
@@ -68,13 +71,14 @@
       </div>
     </div>
   </header>
+  -->
 
   <section class="mb-5">
     <div class="container">
       <div class="row">
         <div class="col-md-6 mb-5">
           <h1 class="display-4">Contact Us</h1>
-          <p class="lead text-secondary">A free bootstrap template by <a href="https://uicookies.com/" target="_blank">uicookies.com</a></p>
+	  <!--<p class="lead text-secondary">A free bootstrap template by <a href="https://uicookies.com/" target="_blank">uicookies.com</a></p>-->
         </div>
       </div>
     </div>
@@ -86,12 +90,14 @@
       <div class="row no-gutters">
         <div class="col-md-3 pb-5 probootstrap-aside-stretch-left probootstrap-inside">
           <div class="mb-3 pt-5">
+	    <!--	  
             <h2 class="h6">Contact</h2>
             <ul class="list-unstyled probootstrap-light mb-4">
               <li class="active"><a href="#">Contact</a></li>
               <li><a href="#">More Link</a></li>
-              <li><a href="#">Another Link</a></li>
+	      <li><a href="#">Another Link</a></li>
             </ul>
+	    -->
           </div>
         </div>
         <div class="col-md-9 pl-md-5 pb-5 pl-0 probootstrap-inside">
@@ -128,7 +134,7 @@
       <div class="row mb-5">
         <div class="col-md-12">
           <h2 class="h1 text-white">Subscribe Newsletter</h2>
-          <p class="lead text-white">Far far away, behind the word mountains, far from the countries Vokalia.</p>
+	  <!--<p class="lead text-white">Far far away, behind the word mountains, far from the countries Vokalia.</p>-->
         </div>
       </div>
       <form action="#" method="post">
@@ -153,6 +159,7 @@
       <div class="row mb-5">
         <div class="col-md-3">
           <h3 class="heading">Latest Blog</h3>
+	  <!--
           <ul class="list-unstyled probootstrap-footer-recent-post">
             <li>
               <a href="#"><span class="date">November 15, 2017</span> The practice of medicine is a lot like parenting </a>
@@ -161,24 +168,28 @@
               <a href="#"><span class="date">November 15, 2017</span>Physicians: Want to overcome burnout? Start studying business. </a>
             </li>
           </ul>
+	  -->
         </div>
         <div class="col-md-3">
           <h3 class="heading">Head Office</h3>
-          <p class="mb-5">98 West 21th Street, Suite 721 New York NY 10016</p>
-          <h3 class="heading text-white">Open</h3> 
+	  <!--<p class="mb-5">98 West 21th Street, Suite 721 New York NY 10016</p>-->
+          <!-- removed below
+	  <h3 class="heading text-white">Open</h3> 
           <p>
             Mon-Fri 7:30-18:00 <br>
             Sat 7:30-18:00 <br>
             Sun 7:30-18:00
           </p>
+	  -->
         </div>
         <div class="col-md-3">
           <h3 class="heading">Quick Links</h3>
           <ul class="list-unstyled probootstrap-footer-links">
             <li><a href="#">Home</a></li>
-            <li><a href="#">Department</a></li>
+            <li><a href="#">Solutions</a></li>
+	    <li><a href="#">Expertise</a></li>
             <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#">Contact Us</a></li>
           </ul>
         </div>
         <div class="col-md-3">
@@ -193,7 +204,8 @@
       <!-- END row -->
       <div class="row probootstrap-copyright">
         <div class="col-md-12">
-          <p><small>&copy; 2017 <a href="https://uicookies.com/" target="_blank">uiCookies Health</a>. All Rights Reserved. Designed &amp; Developed by <a href="https://uicookies.com/" target="_blank">uicookies.com</a> (please don't remove credit, see <a href="https://uicookies.com/license/" target="_blank">license</a>)  <br> Demo Images <a href="https://pexels.com/">Pexels</a> </small></p>
+	  <p><small>&copy; 2018 Embeddian Technologies All Rights Reserved.</p>	
+          <p>&copy; 2017 <a href="https://uicookies.com/" target="_blank">uiCookies Health</a>. All Rights Reserved. Designed &amp; Developed by <a href="https://uicookies.com/" target="_blank">uicookies.com</a> (please don't remove credit, see <a href="https://uicookies.com/license/" target="_blank">license</a>)  <br> Demo Images <a href="https://pexels.com/">Pexels</a> </small></p>
         </div>
       </div>
     </div>
