--- a/solutions.html
+++ b/solutions.html
@@ -94,13 +94,13 @@
         <div class="col-md-3 pb-5 probootstrap-aside-stretch-left probootstrap-inside">
           <div class="mb-3 pt-5">
             <h2 class="h6">Solutions</h2>
-            <ul class="list-unstyled probootstrap-light mb-4">
-              <li class="active"><a href="#">Product Soltions</a></li>
-              <li><a href="#">Service Solutions</a></li>
+            <ul id='myid' class="list-unstyled probootstrap-light mb-4">
+              <li id='1' class="active"><a href="#">Product Solutions</a></li>
+              <li id='2'><a href="#">Service Solutions</a></li>
             </ul>
           </div>
         </div>
-        <div class="col-md-9 pl-md-5 pb-5 pl-0 probootstrap-inside">
+        <div id="product" style="display:block" class="col-md-9 pl-md-5 pb-5 pl-0 probootstrap-inside">
           <h1 class="mt-4 mb-4">Product Solutions</h1>
           <!--<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
 
@@ -114,6 +114,9 @@
 
 	  <p>But nothing the copy said could convince her and so it didn’t take long until a few insidious Copy Writers ambushed her, made her drunk with Longe and Parole and dragged her into their agency, where they abused her for their.</p>-->
         </div>
+	<div id="service" style="display:none" class="col-md-9 pl-md-5 pb-5 pl-0 probootstrap-inside">
+          <h1 class="mt-4 mb-4">Service Solutions</h1>
+	</div>
       </div>
     </div>
   </section>
@@ -262,8 +265,22 @@
   <script src="js/jquery.waypoints.min.js"></script>
   <script src="js/bootstrap-datepicker.js"></script>
   <script src="js/jquery.animateNumber.min.js"></script>
-
   <script src="js/main.js"></script>
-  
+  <script>
+  	$("#myid li").click(function() {
+		$(this).addClass('active').siblings().removeClass('active');
+
+		var x = document.getElementById("product");
+		var y = document.getElementById("service");
+		if(this.id == '1') {
+			x.style.display = "block";
+			y.style.display = "none";
+		}
+		else {
+			x.style.display = "none";
+			y.style.display = "block";
+		}	
+	});
+  </script>
 </body>
 </html>
