--- a/expertise.html
+++ b/expertise.html
@@ -102,7 +102,7 @@
             </ul>
           </div>
         </div>
-        <div id="networking" class="col-md-9 pl-md-5 pb-5 pl-0 probootstrap-inside">
+        <div id="networking" style="display:block" class="col-md-9 pl-md-5 pb-5 pl-0 probootstrap-inside">
           <h1 class="mt-4 mb-4">Networking</h1>
           <!--<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
 
@@ -116,13 +116,13 @@
 
 	  <p>But nothing the copy said could convince her and so it didn’t take long until a few insidious Copy Writers ambushed her, made her drunk with Longe and Parole and dragged her into their agency, where they abused her for their.</p>-->
         </div>
-        <div id="bsp" class="col-md-9 pl-md-5 pb-5 pl-0 probootstrap-inside">
+        <div id="bsp" style="display:none" class="col-md-9 pl-md-5 pb-5 pl-0 probootstrap-inside">
           <h1 class="mt-4 mb-4">BSP & Firmware</h1>
         </div>
-        <div id="mm" class="col-md-9 pl-md-5 pb-5 pl-0 probootstrap-inside">
+        <div id="mm" style="display:none" class="col-md-9 pl-md-5 pb-5 pl-0 probootstrap-inside">
           <h1 class="mt-4 mb-4">Multimedia</h1>
         </div>
-        <div id="ep" class="col-md-9 pl-md-5 pb-5 pl-0 probootstrap-inside">
+        <div id="ep" style="display:none" class="col-md-9 pl-md-5 pb-5 pl-0 probootstrap-inside">
           <h1 class="mt-4 mb-4">Engineering Productivity</h1>
         </div>
 
