--- a/expertise.html
+++ b/expertise.html
@@ -179,13 +179,13 @@
       
     </section>
   -->
-
+  <!-- Removed Subscribe
   <section class="probootstrap-subscribe">
     <div class="container">
       <div class="row mb-5">
         <div class="col-md-12">
           <h2 class="h1 text-white">Subscribe Newsletter</h2>
-	  <!--<p class="lead text-white">Far far away, behind the word mountains, far from the countries Vokalia.</p>-->
+	  <!--<p class="lead text-white">Far far away, behind the word mountains, far from the countries Vokalia.</p>
         </div>
       </div>
       <form action="#" method="post">
@@ -204,7 +204,7 @@
       </form>
     </div>
   </section>
-
+  -->
   <footer class="probootstrap-footer">
     <div class="container">
       <div class="row mb-5">
