--- a/index.html
+++ b/index.html
@@ -55,6 +55,17 @@
     </div>
   </nav>
   <!-- END nav -->
+
+  <header role="banner" class="probootstrap-header py-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-3 mb-4">
+          <a href="index.html" class="mr-auto"><img src="images/solutions.png" width="1024" height="600" class="hires" alt="Embeddian Technologies"></a>
+        </div>
+      </div>
+    </div>
+  </header>
+
   <!-- removed below
   <header role="banner" class="probootstrap-header py-5">
     <div class="container">
@@ -258,6 +269,7 @@
   </section>
   -->
 
+  <!-- removed below
   <section class="probootstrap-section">
     <div class="container">
       <div class="row">
@@ -318,11 +330,9 @@
           </div>
 
       </div>
-     <!--  <div class="row">
-         
-      </div> -->
     </div>
   </section>
+  -->
 
   <!-- removed below
   <section class="probootstrap-section bg-light">
