--- a/expertise.html
+++ b/expertise.html
@@ -80,6 +80,31 @@
       <div class="row">
         <div class="col-md-6 mb-5">
           <h1 class="display-4">Expertise</h1>
+          <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img class="d-block w-100" src="https://www.freepik.com/free-photo/user-people-network-circuit-board-link-connection-technology_1198382.htm" alt="First slide">
+                  <div class="carousel-caption d-none d-md-block">
+                      <h5>Networking</h5>
+                      <p>...</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src=".../800x400?auto=yes&bg=666&fg=444&text=Second slide" alt="Second slide">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src=".../800x400?auto=yes&bg=555&fg=333&text=Third slide" alt="Third slide">
+                </div>
+              </div>
+              <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
+            </div>
 	  <!--<p class="lead text-secondary">A free bootstrap template by <a href="https://uicookies.com/" target="_blank">uicookies.com</a></p>-->
         </div>
       </div>
@@ -103,7 +128,7 @@
           </div>
         </div>
         <div id="networking" style="display:block" class="col-md-9 pl-md-5 pb-5 pl-0 probootstrap-inside">
-          <h1 class="mt-4 mb-4">Networking</h1>
+           
           <!--<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
 
           <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
