navigation menu added back

--- a/about.html
+++ b/about.html
@@ -33,6 +33,7 @@
       </button>
 
       <div class="collapse navbar-collapse" id="probootstrap-nav">
+          <img src="images/logo_2.jpeg" width="200" height="55" class="hires" alt="logo" style="border-radius: 25px">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item"><a href="index.html" class="nav-link pl-0">Home</a></li>
           <li class="nav-item"><a href="solutions.html" class="nav-link">Solutions</a></li>
@@ -79,6 +80,12 @@
           <h1 class="display-4">About Us</h1>
           <!-- p class="lead text-secondary">A free bootstrap template by <a href="https://uicookies.com/" target="_blank">uicookies.com</a></p -->
         </div>
+      </div>
+      <div class="breadcrumbs " style="background-image: url(images/footer-bg.png)">
+          <ul class="d-flex flex-wrap align-items-center p-0 m-0">
+              <li><a href="#">Home</a></li>
+              <li>About Us</li>
+          </ul>
       </div>
     </div>
   </section>
