--- a/application_device.html
+++ b/application_device.html
@@ -33,9 +33,10 @@
       </button>
 
       <div class="collapse navbar-collapse" id="probootstrap-nav">
+          <img src="images/logo_2.jpeg" width="200" height="55" class="hires" alt="logo" style="border-radius: 25px">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item"><a href="index.html" class="nav-link pl-0">Home</a></li>
-          <li class="nav-item "><a href="departments.html" class="nav-link">Departments</a></li>
+          <!-- <li class="nav-item "><a href="departments.html" class="nav-link">Departments</a></li> -->
           <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
           <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
           <li class="nav-item active"><a href="application_device.html" class="nav-link">Application Device & Drivers Development</a></li>
@@ -53,7 +54,7 @@
   </nav>
   <!-- END nav -->
   <header role="banner" class="probootstrap-header py-5">
-    <div class="container">
+    <!-- <div class="container">
       <div class="row">
         <div class="col-md-3 mb-4">
           <a href="index.html" class="mr-auto"><img src="images/logo_2.jpeg" width="212" height="48" class="hires" alt="Free Template by ProBootstrap"></a>
@@ -67,7 +68,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
   </header>
 
   <section class="mb-5">
