--- a/blogs.html
+++ b/blogs.html
@@ -33,6 +33,7 @@
       </button>
 
       <div class="collapse navbar-collapse" id="probootstrap-nav">
+          <img src="images/logo_2.jpeg" width="200" height="55" class="hires" alt="logo" style="border-radius: 25px">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item"><a href="index.html" class="nav-link pl-0">Home</a></li>
           <li class="nav-item"><a href="solutions.html" class="nav-link pl-0">Solutions</a></li>
